--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,18 +3,10 @@ spring:
     name: back
   config:
     import: optional:file:.env[.properties]
-  datasource:
-    url: jdbc:postgresql://localhost:5432/${DATABASE_NAME:faqdb}
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/${DATABASE_NAME:faqdb}
     username: ${DATABASE_USERNAME:faq}
     password: ${DATABASE_PASSWORD:faq123}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
   ai:
     openai:
       api-key: ${OPENAI_API_KEY:empty}
